--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "id": "8f935ffe-e72d-4ab4-8556-725753c8bb2b",
   "name": "label&wash",
-  "publisher": "Default Publisher",
-  "version": "1.0.0.0",
+  "publisher": "MaybeCloud",
+  "version": "1.0.0.7",
   "brief": "",
   "description": "",
   "privacyStatement": "",
