--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "8f935ffe-e72d-4ab4-8556-725753c8bb2b",
-  "name": "label&wash",
+  "name": "AVIACTION",
   "publisher": "MaybeCloud",
   "version": "1.0.1.7",
   "brief": "",
